--- a/com.Selenium.AppTests/AppFiles/AppProperties.properties
+++ b/com.Selenium.AppTests/AppFiles/AppProperties.properties
@@ -2,7 +2,7 @@
 //App Properties
 Browser=chrome
 browserpath =./mydrivers/chromedriver.exe
-edgepath=./AppDrivers/msedgedriver.exe
+edgepath=./mydrivers/msedgedriver.exe
 browserurl = https://www.mycontactform.com/samples.php
 browsername=chrome
 
